--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "sass src/scss/main.scss dist/main.css --style=compressed",
-    "watch": "sass --watch src/scss/main.scss:dist/main.css --style=compressed",
+    "build": "sass scss/main.scss dist/main.css --style=compressed",
+    "watch": "sass --watch scss/main.scss:dist/main.css --style=compressed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
